--- a/EfCoreLibraryAPI/EfCoreLibraryAPI.csproj
+++ b/EfCoreLibraryAPI/EfCoreLibraryAPI.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="FastEndpoints" Version="7.0.1" />
+        <PackageReference Include="FastEndpoints.Security" Version="7.0.1" />
         <PackageReference Include="FastEndpoints.Swagger" Version="7.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.20"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
